--- a/standings.html
+++ b/standings.html
@@ -227,7 +227,15 @@
           <td>1</td>
           <td>+4</td>
           <td>10</td>
-          <td>🟢🟢🟢🟡⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot win"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>2</td>
@@ -240,7 +248,15 @@
           <td>0</td>
           <td>+4</td>
           <td>10</td>
-          <td>🟢🟢🟡🟢⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot win"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>3</td>
@@ -253,7 +269,15 @@
           <td>0</td>
           <td>+2</td>
           <td>7</td>
-          <td>🟢🟡🟢⚪⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot win"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>4</td>
@@ -266,7 +290,15 @@
           <td>1</td>
           <td>+1</td>
           <td>4</td>
-          <td>🔴🟡🟢⚪⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot loss"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>5</td>
@@ -279,7 +311,15 @@
           <td>4</td>
           <td>-1</td>
           <td>4</td>
-          <td>🔴🟢🟡🔴⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot loss"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>6</td>
@@ -292,7 +332,15 @@
           <td>4</td>
           <td>-1</td>
           <td>5</td>
-          <td>🟡🔴🟡🟢⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot draw"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>7</td>
@@ -305,7 +353,15 @@
           <td>3</td>
           <td>-1</td>
           <td>2</td>
-          <td>🟡🔴🟡⚪⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot draw"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>8</td>
@@ -318,7 +374,15 @@
           <td>6</td>
           <td>-4</td>
           <td>2</td>
-          <td>🟡🔴🟡🔴⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot draw"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>9</td>
@@ -331,7 +395,15 @@
           <td>1</td>
           <td>-1</td>
           <td>1</td>
-          <td>🟡🔴⚪⚪⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot draw"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>10</td>
@@ -344,7 +416,15 @@
           <td>3</td>
           <td>-3</td>
           <td>0</td>
-          <td>🔴🔴🔴⚪⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot loss"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
       </tbody>
     </table>
@@ -380,7 +460,15 @@
           <td>2</td>
           <td>+3</td>
           <td>10</td>
-          <td>🟢🟢🟡🟢⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot win"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>2</td>
@@ -393,7 +481,15 @@
           <td>1</td>
           <td>+2</td>
           <td>6</td>
-          <td>🟢🔴🟢⚪⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot win"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>3</td>
@@ -406,7 +502,15 @@
           <td>3</td>
           <td>+2</td>
           <td>6</td>
-          <td>🟢🔴🟢⚪⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot win"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>4</td>
@@ -419,7 +523,15 @@
           <td>3</td>
           <td>+1</td>
           <td>6</td>
-          <td>🟢🟢🔴⚪⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot win"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>5</td>
@@ -432,7 +544,15 @@
           <td>5</td>
           <td>-1</td>
           <td>6</td>
-          <td>🟢🔴🔴🟢⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot win"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>6</td>
@@ -445,7 +565,15 @@
           <td>2</td>
           <td>0</td>
           <td>3</td>
-          <td>🔴🟢⚪⚪⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot loss"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>7</td>
@@ -458,7 +586,15 @@
           <td>5</td>
           <td>-2</td>
           <td>3</td>
-          <td>🔴🟢🔴⚪⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot loss"></div>
+              <div class="form-dot win"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>8</td>
@@ -471,7 +607,15 @@
           <td>3</td>
           <td>-2</td>
           <td>2</td>
-          <td>🔴🟡🟡🔴⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot loss"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>9</td>
@@ -484,7 +628,15 @@
           <td>1</td>
           <td>-1</td>
           <td>1</td>
-          <td>🔴🟡⚪⚪⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot loss"></div>
+              <div class="form-dot draw"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
         <tr>
           <td>10</td>
@@ -497,7 +649,15 @@
           <td>4</td>
           <td>-2</td>
           <td>0</td>
-          <td>🔴🔴⚪⚪⚪</td>
+          <td>
+            <div class="form-indicator">
+              <div class="form-dot loss"></div>
+              <div class="form-dot loss"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+              <div class="form-dot not-played"></div>
+            </div>
+          </td>
         </tr>
       </tbody>
     </table>
