--- a/standings.html
+++ b/standings.html
@@ -212,219 +212,128 @@
           <th>GA</th>
           <th>GD</th>
           <th>Pts</th>
-          <th>Form</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>1</td>
-          <td>Olympus FC</td>
-          <td>6</td>
-          <td>3</td>
-          <td>3</td>
-          <td>0</td>
+          <td>Pro Challengers</td>
+          <td>8</td>
           <td>5</td>
+          <td>2</td>
           <td>1</td>
-          <td>+4</td>
-          <td>12</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot win"></div>
-            </div>
-          </td>
+          <td>7</td>
+          <td>1</td>
+          <td>+6</td>
+          <td>17</td>
         </tr>
         <tr>
           <td>2</td>
-          <td>Pro Challengers</td>
-          <td>6</td>
+          <td>Olympus FC</td>
+          <td>8</td>
           <td>3</td>
-          <td>2</td>
-          <td>1</td>
           <td>4</td>
           <td>1</td>
+          <td>6</td>
+          <td>3</td>
+          <td>+3</td>
+          <td>13</td>
+        </tr>
+        <tr>
+          <td>3</td>
+          <td>Garuda FC</td>
+          <td>8</td>
+          <td>3</td>
+          <td>3</td>
+          <td>2</td>
+          <td>6</td>
+          <td>3</td>
+          <td>+3</td>
+          <td>12</td>
+        </tr>
+        <tr>
+          <td>4</td>
+          <td>Real Exodus</td>
+          <td>5</td>
+          <td>3</td>
+          <td>2</td>
+          <td>0</td>
+          <td>3</td>
+          <td>0</td>
           <td>+3</td>
           <td>11</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-            </div>
-          </td>
         </tr>
         <tr>
-          <td>3</td>
-          <td>Real Exodus</td>
-          <td>4</td>
-          <td>2</td>
-          <td>2</td>
-          <td>0</td>
-          <td>2</td>
-          <td>0</td>
-          <td>+2</td>
-          <td>8</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot not-played"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>4</td>
+          <td>5</td>
           <td>Saste Nukers</td>
-          <td>5</td>
-          <td>2</td>
-          <td>1</td>
-          <td>2</td>
-          <td>3</td>
-          <td>2</td>
-          <td>+1</td>
-          <td>7</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>Garuda FC</td>
           <td>6</td>
+          <td>3</td>
           <td>2</td>
           <td>1</td>
+          <td>5</td>
           <td>3</td>
-          <td>4</td>
-          <td>2</td>
           <td>+2</td>
-          <td>7</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-            </div>
-          </td>
+          <td>11</td>
         </tr>
         <tr>
           <td>6</td>
-          <td>Stevie Slippers</td>
-          <td>6</td>
-          <td>1</td>
-          <td>4</td>
-          <td>1</td>
-          <td>4</td>
-          <td>5</td>
-          <td>-1</td>
+          <td>Sovereign Tridents</td>
           <td>7</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot draw"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>7</td>
-          <td>Chill Guys</td>
-          <td>6</td>
           <td>2</td>
-          <td>0</td>
-          <td>4</td>
+          <td>2</td>
           <td>3</td>
           <td>6</td>
-          <td>-3</td>
           <td>6</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-            </div>
-          </td>
+          <td>0</td>
+          <td>8</td>
+        </tr>
+        <tr>
+          <td>7</td>
+          <td>Stevie Slippers</td>
+          <td>8</td>
+          <td>1</td>
+          <td>4</td>
+          <td>3</td>
+          <td>5</td>
+          <td>9</td>
+          <td>-4</td>
+          <td>7</td>
         </tr>
         <tr>
           <td>8</td>
           <td>Silent Oblivion</td>
-          <td>6</td>
+          <td>7</td>
           <td>1</td>
-          <td>2</td>
+          <td>3</td>
           <td>3</td>
           <td>3</td>
           <td>7</td>
           <td>-4</td>
-          <td>5</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-            </div>
-          </td>
+          <td>6</td>
         </tr>
         <tr>
           <td>9</td>
-          <td>Baharselona</td>
-          <td>6</td>
-          <td>0</td>
-          <td>4</td>
+          <td>Chill Guys</td>
+          <td>7</td>
           <td>2</td>
-          <td>4</td>
+          <td>0</td>
+          <td>5</td>
+          <td>3</td>
+          <td>8</td>
+          <td>-5</td>
           <td>6</td>
-          <td>-2</td>
-          <td>4</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot draw"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-            </div>
-          </td>
         </tr>
         <tr>
           <td>10</td>
-          <td>Sovereign Tridents</td>
-          <td>5</td>
-          <td>1</td>
-          <td>1</td>
-          <td>3</td>
+          <td>Baharselona</td>
+          <td>8</td>
+          <td>0</td>
           <td>4</td>
-          <td>6</td>
-          <td>-2</td>
           <td>4</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot not-played"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-            </div>
-          </td>
+          <td>4</td>
+          <td>8</td>
+          <td>-4</td>
+          <td>4</td>
         </tr>
       </tbody>
     </table>
@@ -445,198 +354,116 @@
           <th>GA</th>
           <th>GD</th>
           <th>Pts</th>
-          <th>Form</th>
         </tr>
       </thead>
       <tbody>
         <tr>
           <td>1</td>
           <td>Disguised Clowns</td>
-          <td>6</td>
-          <td>4</td>
+          <td>7</td>
+          <td>5</td>
           <td>1</td>
           <td>1</td>
-          <td>6</td>
+          <td>7</td>
           <td>3</td>
-          <td>+3</td>
-          <td>13</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot win"></div>
-            </div>
-          </td>
+          <td>+4</td>
+          <td>16</td>
         </tr>
         <tr>
           <td>2</td>
+          <td>Hypercraft CF</td>
+          <td>7</td>
+          <td>4</td>
+          <td>2</td>
+          <td>1</td>
+          <td>7</td>
+          <td>1</td>
+          <td>+6</td>
+          <td>14</td>
+        </tr>
+        <tr>
+          <td>3</td>
           <td>Final Strike</td>
-          <td>6</td>
+          <td>8</td>
           <td>4</td>
           <td>0</td>
-          <td>2</td>
+          <td>4</td>
           <td>7</td>
-          <td>5</td>
-          <td>+2</td>
+          <td>9</td>
+          <td>-2</td>
           <td>12</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Hypercraft CF</td>
-          <td>5</td>
-          <td>3</td>
-          <td>1</td>
-          <td>1</td>
-          <td>6</td>
-          <td>1</td>
-          <td>+5</td>
-          <td>10</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot win"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-            </div>
-          </td>
         </tr>
         <tr>
           <td>4</td>
-          <td>Valhalla Tridents</td>
-          <td>5</td>
-          <td>2</td>
-          <td>1</td>
-          <td>2</td>
-          <td>4</td>
-          <td>3</td>
-          <td>+1</td>
+          <td>Koala Undefeated</td>
           <td>7</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-            </div>
-          </td>
+          <td>3</td>
+          <td>2</td>
+          <td>2</td>
+          <td>8</td>
+          <td>4</td>
+          <td>+4</td>
+          <td>11</td>
         </tr>
         <tr>
           <td>5</td>
-          <td>Dudhe Sona Ekadosh</td>
+          <td>Leviathan Tridents</td>
           <td>6</td>
           <td>2</td>
-          <td>1</td>
-          <td>3</td>
+          <td>2</td>
+          <td>2</td>
           <td>5</td>
-          <td>4</td>
-          <td>+1</td>
-          <td>7</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-            </div>
-          </td>
+          <td>6</td>
+          <td>-1</td>
+          <td>8</td>
         </tr>
         <tr>
           <td>6</td>
           <td>Galahad Tridents</td>
-          <td>5</td>
+          <td>4</td>
           <td>2</td>
           <td>0</td>
-          <td>3</td>
+          <td>2</td>
           <td>4</td>
-          <td>7</td>
-          <td>-3</td>
+          <td>4</td>
+          <td>0</td>
           <td>6</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot not-played"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-            </div>
-          </td>
         </tr>
         <tr>
           <td>7</td>
-          <td>The Blues Tridents</td>
-          <td>5</td>
-          <td>1</td>
-          <td>2</td>
-          <td>2</td>
-          <td>4</td>
-          <td>6</td>
-          <td>-2</td>
-          <td>5</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot loss"></div>
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>8</td>
           <td>Salta United</td>
           <td>5</td>
           <td>1</td>
-          <td>1</td>
-          <td>3</td>
           <td>2</td>
-          <td>5</td>
+          <td>2</td>
+          <td>3</td>
+          <td>6</td>
           <td>-3</td>
-          <td>4</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot win"></div>
-              <div class="form-dot draw"></div>
-            </div>
-          </td>
+          <td>5</td>
+        </tr>
+        <tr>
+          <td>8</td>
+          <td>Chuha Gang</td>
+          <td>6</td>
+          <td>0</td>
+          <td>3</td>
+          <td>3</td>
+          <td>3</td>
+          <td>6</td>
+          <td>-3</td>
+          <td>3</td>
         </tr>
         <tr>
           <td>9</td>
-          <td>Chuha Gang</td>
-          <td>5</td>
+          <td>Valhalla Tridents</td>
+          <td>4</td>
+          <td>1</td>
           <td>0</td>
           <td>3</td>
-          <td>2</td>
-          <td>2</td>
+          <td>1</td>
           <td>4</td>
-          <td>-2</td>
+          <td>-3</td>
           <td>3</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot draw"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot draw"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
         </tr>
         <tr>
           <td>10</td>
@@ -649,15 +476,6 @@
           <td>4</td>
           <td>-2</td>
           <td>0</td>
-          <td>
-            <div class="form-indicator">
-              <div class="form-dot not-played"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot loss"></div>
-              <div class="form-dot not-played"></div>
-              <div class="form-dot not-played"></div>
-            </div>
-          </td>
         </tr>
       </tbody>
     </table>
