--- a/standings.html
+++ b/standings.html
@@ -197,289 +197,269 @@
   </header>
 
 <div class="leagues-container">
-  <div class="league">
-    <div class="league-header champions-league">Champions League</div>
-    <table class="standings-table">
-      <thead>
-        <tr>
-          <th>Pos</th>
-          <th>Team</th>
-          <th>P</th>
-          <th>W</th>
-          <th>D</th>
-          <th>L</th>
-          <th>GF</th>
-          <th>GA</th>
-          <th>GD</th>
-          <th>Pts</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>Pro Challengers</td>
-          <td>8</td>
-          <td>5</td>
-          <td>2</td>
-          <td>1</td>
-          <td>7</td>
-          <td>1</td>
-          <td>+6</td>
-          <td>17</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Olympus FC</td>
-          <td>8</td>
-          <td>3</td>
-          <td>4</td>
-          <td>1</td>
-          <td>6</td>
-          <td>3</td>
-          <td>+3</td>
-          <td>13</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Garuda FC</td>
-          <td>8</td>
-          <td>3</td>
-          <td>3</td>
-          <td>2</td>
-          <td>6</td>
-          <td>3</td>
-          <td>+3</td>
-          <td>12</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>Real Exodus</td>
-          <td>5</td>
-          <td>3</td>
-          <td>2</td>
-          <td>0</td>
-          <td>3</td>
-          <td>0</td>
-          <td>+3</td>
-          <td>11</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>Saste Nukers</td>
-          <td>6</td>
-          <td>3</td>
-          <td>2</td>
-          <td>1</td>
-          <td>5</td>
-          <td>3</td>
-          <td>+2</td>
-          <td>11</td>
-        </tr>
-        <tr>
-          <td>6</td>
-          <td>Sovereign Tridents</td>
-          <td>7</td>
-          <td>2</td>
-          <td>2</td>
-          <td>3</td>
-          <td>6</td>
-          <td>6</td>
-          <td>0</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>7</td>
-          <td>Stevie Slippers</td>
-          <td>8</td>
-          <td>1</td>
-          <td>4</td>
-          <td>3</td>
-          <td>5</td>
-          <td>9</td>
-          <td>-4</td>
-          <td>7</td>
-        </tr>
-        <tr>
-          <td>8</td>
-          <td>Silent Oblivion</td>
-          <td>7</td>
-          <td>1</td>
-          <td>3</td>
-          <td>3</td>
-          <td>3</td>
-          <td>7</td>
-          <td>-4</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>9</td>
-          <td>Chill Guys</td>
-          <td>7</td>
-          <td>2</td>
-          <td>0</td>
-          <td>5</td>
-          <td>3</td>
-          <td>8</td>
-          <td>-5</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>10</td>
-          <td>Baharselona</td>
-          <td>8</td>
-          <td>0</td>
-          <td>4</td>
-          <td>4</td>
-          <td>4</td>
-          <td>8</td>
-          <td>-4</td>
-          <td>4</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+    <!-- Champions League -->
+    <div class="league">
+        <div class="league-header champions-league">Champions League</div>
+        <table class="standings-table">
+            <thead>
+                <tr>
+                    <th class="pos-col">#</th>
+                    <th class="team-col">Team</th>
+                    <th class="stats-col">P</th>
+                    <th class="stats-col">W</th>
+                    <th class="stats-col">D</th>
+                    <th class="stats-col">L</th>
+                    <th class="stats-col">+/-</th>
+                    <th class="stats-col">GD</th>
+                    <th class="stats-col">Pts</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Pro Challengers</td>
+                    <td>8</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>7:1</td>
+                    <td>+6</td>
+                    <td>17</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Saste Nukers</td>
+                    <td>7</td>
+                    <td>4</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>6:3</td>
+                    <td>+3</td>
+                    <td>14</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Olympus FC</td>
+                    <td>9</td>
+                    <td>3</td>
+                    <td>4</td>
+                    <td>2</td>
+                    <td>6:4</td>
+                    <td>+2</td>
+                    <td>13</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Garuda FC</td>
+                    <td>8</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>6:3</td>
+                    <td>+3</td>
+                    <td>12</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Real Exodus</td>
+                    <td>5</td>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>0</td>
+                    <td>3:0</td>
+                    <td>+3</td>
+                    <td>11</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Sovereign Tridents</td>
+                    <td>8</td>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>8:7</td>
+                    <td>+1</td>
+                    <td>11</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Silent Oblivion</td>
+                    <td>8</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>5:8</td>
+                    <td>-3</td>
+                    <td>9</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Stevie Slippers</td>
+                    <td>8</td>
+                    <td>1</td>
+                    <td>4</td>
+                    <td>3</td>
+                    <td>5:9</td>
+                    <td>-4</td>
+                    <td>7</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>Chili Guys</td>
+                    <td>8</td>
+                    <td>2</td>
+                    <td>0</td>
+                    <td>6</td>
+                    <td>4:10</td>
+                    <td>-6</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Baharselona</td>
+                    <td>9</td>
+                    <td>0</td>
+                    <td>4</td>
+                    <td>5</td>
+                    <td>5:10</td>
+                    <td>-5</td>
+                    <td>4</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 
-  <div class="league">
-    <div class="league-header europa-league">Europa League</div>
-    <table class="standings-table">
-      <thead>
-        <tr>
-          <th>Pos</th>
-          <th>Team</th>
-          <th>P</th>
-          <th>W</th>
-          <th>D</th>
-          <th>L</th>
-          <th>GF</th>
-          <th>GA</th>
-          <th>GD</th>
-          <th>Pts</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td>1</td>
-          <td>Disguised Clowns</td>
-          <td>7</td>
-          <td>5</td>
-          <td>1</td>
-          <td>1</td>
-          <td>7</td>
-          <td>3</td>
-          <td>+4</td>
-          <td>16</td>
-        </tr>
-        <tr>
-          <td>2</td>
-          <td>Hypercraft CF</td>
-          <td>7</td>
-          <td>4</td>
-          <td>2</td>
-          <td>1</td>
-          <td>7</td>
-          <td>1</td>
-          <td>+6</td>
-          <td>14</td>
-        </tr>
-        <tr>
-          <td>3</td>
-          <td>Final Strike</td>
-          <td>8</td>
-          <td>4</td>
-          <td>0</td>
-          <td>4</td>
-          <td>7</td>
-          <td>9</td>
-          <td>-2</td>
-          <td>12</td>
-        </tr>
-        <tr>
-          <td>4</td>
-          <td>Koala Undefeated</td>
-          <td>7</td>
-          <td>3</td>
-          <td>2</td>
-          <td>2</td>
-          <td>8</td>
-          <td>4</td>
-          <td>+4</td>
-          <td>11</td>
-        </tr>
-        <tr>
-          <td>5</td>
-          <td>Leviathan Tridents</td>
-          <td>6</td>
-          <td>2</td>
-          <td>2</td>
-          <td>2</td>
-          <td>5</td>
-          <td>6</td>
-          <td>-1</td>
-          <td>8</td>
-        </tr>
-        <tr>
-          <td>6</td>
-          <td>Galahad Tridents</td>
-          <td>4</td>
-          <td>2</td>
-          <td>0</td>
-          <td>2</td>
-          <td>4</td>
-          <td>4</td>
-          <td>0</td>
-          <td>6</td>
-        </tr>
-        <tr>
-          <td>7</td>
-          <td>Salta United</td>
-          <td>5</td>
-          <td>1</td>
-          <td>2</td>
-          <td>2</td>
-          <td>3</td>
-          <td>6</td>
-          <td>-3</td>
-          <td>5</td>
-        </tr>
-        <tr>
-          <td>8</td>
-          <td>Chuha Gang</td>
-          <td>6</td>
-          <td>0</td>
-          <td>3</td>
-          <td>3</td>
-          <td>3</td>
-          <td>6</td>
-          <td>-3</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>9</td>
-          <td>Valhalla Tridents</td>
-          <td>4</td>
-          <td>1</td>
-          <td>0</td>
-          <td>3</td>
-          <td>1</td>
-          <td>4</td>
-          <td>-3</td>
-          <td>3</td>
-        </tr>
-        <tr>
-          <td>10</td>
-          <td>Prestige Tridents</td>
-          <td>2</td>
-          <td>0</td>
-          <td>0</td>
-          <td>2</td>
-          <td>2</td>
-          <td>4</td>
-          <td>-2</td>
-          <td>0</td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
+    <!-- Europa League -->
+    <div class="league">
+        <div class="league-header europa-league">Europa League</div>
+        <table class="standings-table">
+            <thead>
+                <tr>
+                    <th class="pos-col">#</th>
+                    <th class="team-col">Team</th>
+                    <th class="stats-col">P</th>
+                    <th class="stats-col">W</th>
+                    <th class="stats-col">D</th>
+                    <th class="stats-col">L</th>
+                    <th class="stats-col">+/-</th>
+                    <th class="stats-col">GD</th>
+                    <th class="stats-col">Pts</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>1</td>
+                    <td>Disguised Clowns</td>
+                    <td>8</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>1</td>
+                    <td>8.4</td>
+                    <td>+4</td>
+                    <td>17</td>
+                </tr>
+                <tr>
+                    <td>2</td>
+                    <td>Hypercraft CF</td>
+                    <td>8</td>
+                    <td>4</td>
+                    <td>2</td>
+                    <td>2</td>
+                    <td>8.3</td>
+                    <td>+5</td>
+                    <td>14</td>
+                </tr>
+                <tr>
+                    <td>3</td>
+                    <td>Final Strike</td>
+                    <td>9</td>
+                    <td>4</td>
+                    <td>1</td>
+                    <td>4</td>
+                    <td>8:10</td>
+                    <td>-2</td>
+                    <td>13</td>
+                </tr>
+                <tr>
+                    <td>4</td>
+                    <td>Koala Undefeated</td>
+                    <td>8</td>
+                    <td>3</td>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>9.5</td>
+                    <td>+4</td>
+                    <td>12</td>
+                </tr>
+                <tr>
+                    <td>5</td>
+                    <td>Galahad Tridents</td>
+                    <td>5</td>
+                    <td>3</td>
+                    <td>0</td>
+                    <td>2</td>
+                    <td>6.5</td>
+                    <td>+1</td>
+                    <td>9</td>
+                </tr>
+                <tr>
+                    <td>6</td>
+                    <td>Leviathan Tridents</td>
+                    <td>7</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>2</td>
+                    <td>6.7</td>
+                    <td>-1</td>
+                    <td>9</td>
+                </tr>
+                <tr>
+                    <td>7</td>
+                    <td>Valhalla Tridents</td>
+                    <td>5</td>
+                    <td>2</td>
+                    <td>0</td>
+                    <td>3</td>
+                    <td>3.4</td>
+                    <td>-1</td>
+                    <td>6</td>
+                </tr>
+                <tr>
+                    <td>8</td>
+                    <td>Salta United</td>
+                    <td>6</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3</td>
+                    <td>3.8</td>
+                    <td>-5</td>
+                    <td>5</td>
+                </tr>
+                <tr>
+                    <td>9</td>
+                    <td>Chuha Gang</td>
+                    <td>7</td>
+                    <td>0</td>
+                    <td>4</td>
+                    <td>3</td>
+                    <td>4.7</td>
+                    <td>-3</td>
+                    <td>4</td>
+                </tr>
+                <tr>
+                    <td>10</td>
+                    <td>Prestige Tridents</td>
+                    <td>3</td>
+                    <td>0</td>
+                    <td>1</td>
+                    <td>2</td>
+                    <td>3.5</td>
+                    <td>-2</td>
+                    <td>1</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 </body>
 </html>
