--- a/standings.html
+++ b/standings.html
@@ -404,7 +404,7 @@
                 </tr>
                 <tr>
                     <td>6</td>
-                    <td>Leviathan Tridents</td>
+                    <td>The Blues Tridents</td>
                     <td>7</td>
                     <td>2</td>
                     <td>3</td>
