--- a/standings.html
+++ b/standings.html
@@ -331,135 +331,135 @@
 
     <!-- Europa League -->
     <div class="league">
-        <div class="league-header europa-league">Europa League</div>
-        <table class="standings-table">
-            <thead>
-                <tr>
-                    <th class="pos-col">#</th>
-                    <th class="team-col">Team</th>
-                    <th class="stats-col">P</th>
-                    <th class="stats-col">W</th>
-                    <th class="stats-col">D</th>
-                    <th class="stats-col">L</th>
-                    <th class="stats-col">+/-</th>
-                    <th class="stats-col">GD</th>
-                    <th class="stats-col">Pts</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Disguised Clowns</td>
-                    <td>8</td>
-                    <td>5</td>
-                    <td>2</td>
-                    <td>1</td>
-                    <td>8.4</td>
-                    <td>+4</td>
-                    <td>17</td>
-                </tr>
-                <tr>
-                    <td>2</td>
-                    <td>Hypercraft CF</td>
-                    <td>8</td>
-                    <td>4</td>
-                    <td>2</td>
-                    <td>2</td>
-                    <td>8.3</td>
-                    <td>+5</td>
-                    <td>14</td>
-                </tr>
-                <tr>
-                    <td>3</td>
-                    <td>Final Strike</td>
-                    <td>9</td>
-                    <td>4</td>
-                    <td>1</td>
-                    <td>4</td>
-                    <td>8:10</td>
-                    <td>-2</td>
-                    <td>13</td>
-                </tr>
-                <tr>
-                    <td>4</td>
-                    <td>Koala Undefeated</td>
-                    <td>8</td>
-                    <td>3</td>
-                    <td>3</td>
-                    <td>2</td>
-                    <td>9.5</td>
-                    <td>+4</td>
-                    <td>12</td>
-                </tr>
-                <tr>
-                    <td>5</td>
-                    <td>Galahad Tridents</td>
-                    <td>5</td>
-                    <td>3</td>
-                    <td>0</td>
-                    <td>2</td>
-                    <td>6.5</td>
-                    <td>+1</td>
-                    <td>9</td>
-                </tr>
-                <tr>
-                    <td>6</td>
-                    <td>The Blues Tridents</td>
-                    <td>7</td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>2</td>
-                    <td>6.7</td>
-                    <td>-1</td>
-                    <td>9</td>
-                </tr>
-                <tr>
-                    <td>7</td>
-                    <td>Valhalla Tridents</td>
-                    <td>5</td>
-                    <td>2</td>
-                    <td>0</td>
-                    <td>3</td>
-                    <td>3.4</td>
-                    <td>-1</td>
-                    <td>6</td>
-                </tr>
-                <tr>
-                    <td>8</td>
-                    <td>Salta United</td>
-                    <td>6</td>
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3</td>
-                    <td>3.8</td>
-                    <td>-5</td>
-                    <td>5</td>
-                </tr>
-                <tr>
-                    <td>9</td>
-                    <td>Chuha Gang</td>
-                    <td>7</td>
-                    <td>0</td>
-                    <td>4</td>
-                    <td>3</td>
-                    <td>4.7</td>
-                    <td>-3</td>
-                    <td>4</td>
-                </tr>
-                <tr>
-                    <td>10</td>
-                    <td>Prestige Tridents</td>
-                    <td>3</td>
-                    <td>0</td>
-                    <td>1</td>
-                    <td>2</td>
-                    <td>3.5</td>
-                    <td>-2</td>
-                    <td>1</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+    <div class="league-header europa-league">Europa League</div>
+    <table class="standings-table">
+        <thead>
+            <tr>
+                <th class="pos-col">#</th>
+                <th class="team-col">Team</th>
+                <th class="stats-col">P</th>
+                <th class="stats-col">W</th>
+                <th class="stats-col">D</th>
+                <th class="stats-col">L</th>
+                <th class="stats-col">+/-</th>
+                <th class="stats-col">GD</th>
+                <th class="stats-col">Pts</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>1</td>
+                <td>Disguised Clowns</td>
+                <td>8</td>
+                <td>5</td>
+                <td>2</td>
+                <td>1</td>
+                <td>8:4</td>
+                <td>+4</td>
+                <td>17</td>
+            </tr>
+            <tr>
+                <td>2</td>
+                <td>Hypercraft CF</td>
+                <td>8</td>
+                <td>4</td>
+                <td>2</td>
+                <td>2</td>
+                <td>8:3</td>
+                <td>+5</td>
+                <td>14</td>
+            </tr>
+            <tr>
+                <td>3</td>
+                <td>Final Strike</td>
+                <td>9</td>
+                <td>4</td>
+                <td>1</td>
+                <td>4</td>
+                <td>8:10</td>
+                <td>-2</td>
+                <td>13</td>
+            </tr>
+            <tr>
+                <td>4</td>
+                <td>Koala Undefeated</td>
+                <td>8</td>
+                <td>3</td>
+                <td>3</td>
+                <td>2</td>
+                <td>9:5</td>
+                <td>+4</td>
+                <td>12</td>
+            </tr>
+            <tr>
+                <td>5</td>
+                <td>Valhalla Tridents</td>
+                <td>7</td>
+                <td>3</td>
+                <td>1</td>
+                <td>3</td>
+                <td>6:4</td>
+                <td>+2</td>
+                <td>10</td>
+            </tr>
+            <tr>
+                <td>6</td>
+                <td>Leviathan Tridents</td>
+                <td>7</td>
+                <td>2</td>
+                <td>3</td>
+                <td>2</td>
+                <td>6:7</td>
+                <td>-1</td>
+                <td>9</td>
+            </tr>
+            <tr>
+                <td>7</td>
+                <td>Galahad Tridents</td>
+                <td>6</td>
+                <td>3</td>
+                <td>0</td>
+                <td>3</td>
+                <td>6:8</td>
+                <td>-2</td>
+                <td>9</td>
+            </tr>
+            <tr>
+                <td>8</td>
+                <td>Chuha Gang</td>
+                <td>8</td>
+                <td>0</td>
+                <td>5</td>
+                <td>3</td>
+                <td>4:7</td>
+                <td>-3</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>9</td>
+                <td>Salta United</td>
+                <td>6</td>
+                <td>1</td>
+                <td>2</td>
+                <td>3</td>
+                <td>3:8</td>
+                <td>-5</td>
+                <td>5</td>
+            </tr>
+            <tr>
+                <td>10</td>
+                <td>Prestige Tridents</td>
+                <td>3</td>
+                <td>0</td>
+                <td>1</td>
+                <td>2</td>
+                <td>3:5</td>
+                <td>-2</td>
+                <td>1</td>
+            </tr>
+        </tbody>
+    </table>
+</div>
 </div>
 </body>
 </html>
